aligned circles so that they no longer move when it changes color

--- a/style.css
+++ b/style.css
@@ -28,55 +28,13 @@ h1 {
   background-color: #1e3bdb;
   display: flex;
   flex-wrap: wrap;
-  height: 670px;
+  height: 645px;
   width: 780px;
 }
 .game div {
+  margin: 5px;
   height: 100px;
   width: 100px;
-}
-
-#column0 {
-  padding: 5px;
-  width: 100px;
-  height: 100px;
-}
-#column1 {
-  padding: 5px;
-  width: 100px;
-  height: 100px;
-}
-#column2 {
-  padding: 5px;
-  width: 100px;
-  height: 100px;
-}
-#column3 {
-  padding: 5px;
-  width: 100px;
-  height: 100px;
-}
-#column4 {
-  padding: 5px;
-  width: 100px;
-  height: 100px;
-}
-#column5 {
-  padding: 5px;
-  width: 100px;
-  height: 100px;
-}
-#column6 {
-  padding: 5px;
-  width: 100px;
-  height: 100px;
-}
-#column0 .emptySpace {
-  margin-left: 5px;
-}
-
-#column6 .emptySpace {
-  margin-right: 5px;
 }
 
 .messageBox {
@@ -85,21 +43,15 @@ h1 {
 }
 
 .playerRed {
-    margin-top: 5px;
   background-color: red;
   border-radius: 50%;
 }
 .playerYellow {
-    margin-top: 5px;
   background-color: yellow;
   border-radius: 50%;
-  height: 10px;
-  width: 10px;
 }
 
 .emptySpace {
-  margin-top: 5px;
   background-color: white;
   border-radius: 50%;
-  border: 2px solid #1e3bdb;
 }
